# iris-cortexanalyzer-module

./: Makefile  README.md  buildnpush2iris.sh  setup.cfg  setup.py
iris_cortexanalyzer_module/: IrisCortexanalyzerConfig.py  IrisCortexanalyzerInterface.py  __init__.py
iris_cortexanalyzer_module/cortexanalyzer_handler/: cortexanalyzer_handler.py
